--- a/src/app/pages/Calificaciones/calificaciones/calificaciones.component.html
+++ b/src/app/pages/Calificaciones/calificaciones/calificaciones.component.html
@@ -96,7 +96,9 @@
           </div>
 
           <div class="review-col actions">
-            <button class="action-chip btn-detail" (click)="openReportModal()" aria-haspopup="dialog">
+            <button class="action-chip btn-detail"
+                    (click)="openReportModal(r)"
+                    aria-haspopup="dialog">
               🚩 Reportar
             </button>
           </div>
