--- a/src/app/pages/registrar-servicio/registrar-servicio.component.html
+++ b/src/app/pages/registrar-servicio/registrar-servicio.component.html
@@ -244,11 +244,21 @@
         <button 
           type="submit" 
           class="btn btn-success btn-xl" 
-          [disabled]="!form.valid" 
+          [disabled]="!form.valid || isSubmitting" 
           *ngIf="currentStep === totalSteps"
         >
-          <i class="bi bi-check-circle"></i> Publicar Servicio
+          <span *ngIf="!isSubmitting">
+            <i class="bi bi-check-circle"></i> Publicar Servicio
+          </span>
+          <span *ngIf="isSubmitting">
+            <i class="bi bi-hourglass-split"></i> Publicando... {{ uploadProgress }}%
+          </span>
         </button>
+
+        <!-- Indicador de progreso -->
+        <div *ngIf="isSubmitting" class="upload-progress-container">
+          <div class="upload-progress-bar" [style.width.%]="uploadProgress"></div>
+        </div>
       </div>
       
     </form>
