--- a/src/app/components/servicio-detalle-modal/servicio-detalle-modal.component.html
+++ b/src/app/components/servicio-detalle-modal/servicio-detalle-modal.component.html
@@ -33,7 +33,7 @@
         <div class="image-carousel">
           <div class="carousel-container">
             <img 
-              [src]="currentImage" 
+              [src]="currentImageUrl" 
               [alt]="detalle.titulo"
               class="carousel-image"
               loading="lazy">
